# screener

./: .gitignore  README.md  RESTRUCTURE_SUMMARY.md  TODO.md  data_fetcher_fscore.py  financial_fetcher.py  financial_models.py  financial_parser.py  fscore.py  pyproject.toml  screener.py  test_data.py  ticker_data.py
data-fetcher/: .env.example  ai_pdf_parser.py  fetcher.py  fscore.py  models.py  parser.py  pdf_parser.py  test_data.py  test_fscore_calculation.py  test_suite.py
docs/: bioarctic_piotroski_report.md  package_structure.md
src/screener/: __init__.py  __main__.py
src/screener/analysis/: __init__.py  fscore_calculator.py  parser.py
src/screener/cli/: fscore_cli.py  screener_cli.py  ticker_cli.py
src/screener/core/: __init__.py  momentum.py
src/screener/data/: fetcher.py  pdf_parser.py  tickers.csv
src/screener/utils/: __init__.py  stockanalysis_lookup.py
tests/: __init__.py  test_data.py  test_fscore_calculation.py  test_suite.py
