[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "screener"
version = "0.1.0"
description = "A comprehensive stock screening tool that combines technical momentum analysis with enhanced fundamental Piotroski F-Score evaluation for Nordic stocks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "numpy>=2.3.3",
    "openai>=2.1.0",
    "pandas>=2.3.3",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "selenium>=4.36.0",
    "yfinance>=0.2.66",
]

[project.scripts]
screener = "screener.cli.screener_cli:main"
fscore = "screener.cli.fscore_cli:main"
ticker-data = "screener.cli.ticker_cli:main"

[project.urls]
Homepage = "https://github.com/alexjaw/screener"
Repository = "https://github.com/alexjaw/screener"

[tool.hatch.build.targets.wheel]
packages = ["src/screener"]
